fix: overlapping content in the sidebar

--- a/_sass/color_schemes/embo.scss
+++ b/_sass/color_schemes/embo.scss
@@ -3,6 +3,7 @@ $embo-purple: #835EC4;
 
 $nav-width: 264px;
 $nav-width-md: 248px;
+$content-width: 800px;
 
 $sidebar-color: $embo-green;
 
